Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/forms/data_entry_form.xhtml
+++ b/src/main/webapp/forms/data_entry_form.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./index.xhtml">
+        <ui:composition template="/forms/index.xhtml">
 
             <ui:define name="contents">
 
