--- a/src/main/webapp/forms/data_entry_forms.xhtml
+++ b/src/main/webapp/forms/data_entry_forms.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:body>
-        <ui:composition template="./index.xhtml">
+        <ui:composition template="/forms/index.xhtml">
 
 
             <ui:define name="contents">
