--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
@@ -40,7 +40,7 @@
                         <h:panelGrid id="sale" columns="2" class="alignTop" >
 
 
-                            <p:panel >
+                            <p:panel style="height: 1125px;">
                                 <f:facet name="header" >
                                     <h:outputLabel value="Pharmacy Retail Bill(Sale 3)" />
                                 </f:facet>
