--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_3.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_3.xhtml
@@ -42,7 +42,7 @@
                         <h:panelGrid id="sale" columns="2" class="alignTop" >
 
 
-                            <p:panel >
+                            <p:panel style="height: 1120px">
                                 <f:facet name="header" >
                                     <h:outputLabel value="Pharmacy Retail Bill(Sale 4)" />
                                 </f:facet>
