--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale.xhtml
@@ -31,6 +31,7 @@
                                 <p:outputLabel value="#{pharmacySaleController.errorMessage}" ></p:outputLabel>
                             </h:panelGroup>
                         </h:panelGroup>
+                        
                         <p:panel>
                             <p:commandButton disabled="true" value="Sale 1" action="pharmacy_bill_retail_sale" rendered="#{webUserController.hasPrivilege('PharmacySale')}" actionListener="#{pharmacySaleController.pharmacyRetailSale()}" />
                             <p:commandButton value="Sale 2" action="pharmacy_bill_retail_sale_1" rendered="#{webUserController.hasPrivilege('PharmacySale')}" actionListener="#{pharmacySaleController1.pharmacyRetailSale()}" />
@@ -39,9 +40,9 @@
                         </p:panel>
                         <h:panelGrid id="sale" columns="4" class="alignTop" >
 
-                            <div class="row" style="margin-top: 0px">
-                                <div class="col-md-7" style="margin-top: 0px">
-                                    <p:panel style="width: 700px">
+                            <div class="row">
+                                <div class="col-md-9" style="margin-top: 0px">
+                                    <p:panel style="width: 900px; height: 1035px">
                                 <f:facet name="header">
                                     <h:outputLabel value="Pharmacy Retail Bill(Sale 1)" />
                                 </f:facet>
@@ -281,8 +282,8 @@
 
                             </p:panel>
                                 </div>
-                                <div class="col-md-5">
-                                    <p:panel style="width: 700px">
+                                <div class="col-md-3">
+                                    <p:panel style="width: 590px">
 
 
                                 <f:facet name="header" >
