Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/ezcomp/login.xhtml
+++ b/src/main/webapp/resources/ezcomp/login.xhtml
@@ -69,6 +69,11 @@
 
 
                             </div>
+                            <div class="card-footer d-flex align-items-center">
+                                <h:commandLink action="#{sessionController.navigateToWebHomePage}" class="btn btn-secondary">
+                                    <h:graphicImage style="height: 2em;" library="image" name="home.png" alt="Home" styleClass="img-fluid"/>
+                                </h:commandLink>
+                            </div>
                         </div>
                     </div>
                 </div>
