Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/webcontent/index.xhtml
+++ b/src/main/webapp/webcontent/index.xhtml
@@ -72,7 +72,7 @@
                                 <h:commandButton class="btn btn-primary m-2 w-75" value="Add New Short Contents" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
                             </div>
                             <div class="col" >
-                                <h:commandButton class="btn btn-primary m-2 w-75" value="Add New Long Contents" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
+                                <h:commandButton class="btn btn-primary m-2 w-75" value="Add New Long Contents" action="#{webContentController.toAddNewLongWebContent()}" ></h:commandButton>
                             </div>
                             <div class="col" >
                                 <h:commandButton class="btn btn-primary m-2 w-75" value="Add New List Contents" action="#{webContentController.toAddNewWebContent()}" ></h:commandButton>
